force-app/main/default/objects/Contribution__c/fields/cost__c.field-meta.xml
<CustomField>
    <fullName>cost__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>