force-app/main/default/objects/Contribution__c/fields/dateOfContribution__c.field-meta.xml
<CustomField>
    <fullName>dateOfContribution__c</fullName>
    <label>Date of Contribution</label>
    <type>Date</type>
</CustomField>