force-app/main/default/objects/Contribution__c/fields/financialItemMD__c.field-meta.xml
<CustomField>
    <fullName>financialItemMD__c</fullName>
    <label>Financial Item</label>
    <referenceTo>FinancialItem__c</referenceTo>
    <relationshipLabel>Contributions</relationshipLabel>
    <relationshipName>Contributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>